--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "capstone",
   "private": false,
   "version": "0.0.0",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "deploy": "vite build && gh-pages -d dist",
     "dev": "vite",
